se agreggó el readme

--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=inventario
 spring.output.ansi.enabled=always
 
-# Conexión a H2 en memoria
+# Conexiï¿½n a H2 en memoria
 spring.datasource.url=jdbc:h2:mem:inventario_db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# Configuración JPA
+# Configuraciï¿½n JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -21,3 +21,4 @@ logging.level.root=INFO
 
 # Puerto del servidor
 server.port=${PORT:8080}
+
