--- a/inventario/src/main/resources/application.properties
+++ b/inventario/src/main/resources/application.properties
@@ -22,3 +22,5 @@ logging.level.root=INFO
 # Puerto del servidor
 server.port=${PORT:8080}
 
+jwt.secret=clave-super-secreta-para-jwt-2025-segura!
+jwt.expiration=36000000
